--- a/app/src/main/res/layout/activity_cliente_main.xml
+++ b/app/src/main/res/layout/activity_cliente_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -7,154 +7,168 @@
     android:layout_height="match_parent"
     tools:context=".activity.cliente.ClienteMainActivity">
 
-    <!-- Header con logo y opciones -->
     <LinearLayout
-        android:id="@+id/headerLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="12dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <!-- Icono de perfil -->
-        <Button
-            android:id="@+id/btnProfile"
-            style="?attr/materialIconButtonFilledTonalStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="Profile"
-            app:icon="@drawable/rounded_person_24" />
-
-        <!-- Logo Foodisea -->
-        <ImageView
-            android:id="@+id/ivLogoFoodisea"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/foodisea" />
-
-        <!-- Icono de historial de pedidos -->
-        <Button
-            android:id="@+id/btnOrders"
-            style="?attr/materialIconButtonFilledTonalStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="Historial"
-            app:icon="@drawable/rounded_orders_24" />
-    </LinearLayout>
-
-    <!-- Texto de bienvenida -->
-    <TextView
-        android:id="@+id/tvWelcome"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/headerLayout"
-        android:padding="10dp"
-        android:text="¡Hola John! ¿Qué te gustaría pedir hoy?"
-        android:textColor="@android:color/black"
-        android:textSize="14sp"
-        android:textStyle="bold" />
-
-    <!-- Barra de búsqueda -->
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/svRestaurants"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvWelcome"
-        android:layout_margin="8dp"
-        app:queryHint="Buscar restaurantes, platos..."
-        app:iconifiedByDefault="false"
-        android:background="@drawable/search_view_bg" />
-
-    <!-- Todas las categorías -->
-    <TextView
-        android:id="@+id/tvCategory"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/svRestaurants"
-        android:padding="10dp"
-        android:text="Categorías"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
-
-    <!-- Lista de categorías horizontal -->
-    <HorizontalScrollView
-        android:id="@+id/hsvCategories"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvCategory"
-        android:scrollbars="none"
-        android:fillViewport="true">
-
+        <!-- Header con logo y opciones -->
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/headerLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingHorizontal="10dp">
+            android:padding="14dp">
 
-            <!-- Botones con las categorías -->
+            <!-- Icono de perfil -->
             <Button
-                style="?attr/materialIconButtonFilledStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingHorizontal="18dp"
-                android:text="Todas" />
-
-            <Button
+                android:id="@+id/btnProfile"
                 style="?attr/materialIconButtonFilledTonalStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="18dp"
-                android:text="Rápida" />
+                android:contentDescription="@string/btnProfile"
+                app:icon="@drawable/rounded_person_24" />
 
+            <!-- Logo Foodisea -->
+            <ImageView
+                android:id="@+id/ivLogoFoodisea"
+                android:layout_width="0dp"
+                android:layout_height="48dp"
+                android:layout_weight="1"
+                android:contentDescription="@string/app_name"
+                app:srcCompat="@drawable/foodisea" />
+
+            <!-- Icono de historial de pedidos -->
             <Button
+                android:id="@+id/btnOrders"
                 style="?attr/materialIconButtonFilledTonalStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="18dp"
-                android:text="Postres" />
-
-            <Button
-                style="?attr/materialIconButtonFilledTonalStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingHorizontal="18dp"
-                android:text="Desayunos" />
-
-            <Button
-                style="?attr/materialIconButtonFilledTonalStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingHorizontal="18dp"
-                android:text="Parrilladas" />
-
-            <Button
-                style="?attr/materialIconButtonFilledTonalStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingHorizontal="18dp"
-                android:text="Tortas" />
-
+                android:contentDescription="@string/btnOrders"
+                app:icon="@drawable/rounded_orders_24" />
         </LinearLayout>
-    </HorizontalScrollView>
 
-    <!-- Restaurantes -->
-    <TextView
-        android:id="@+id/tvRestaurants"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/hsvCategories"
-        android:padding="10dp"
-        android:text="Restaurantes"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        <!-- Parte scrolleable -->
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <!-- Lista de restaurantes -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvRestaurants"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvRestaurants"
-        android:nestedScrollingEnabled="false" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <!-- Texto de bienvenida -->
+                <TextView
+                    android:id="@+id/tvWelcome"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:text="@string/welcome"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <!-- Barra de búsqueda -->
+                <androidx.appcompat.widget.SearchView
+                    android:id="@+id/svRestaurants"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="8dp"
+                    android:layout_marginHorizontal="12dp"
+                    app:queryHint="Buscar restaurantes, platos..."
+                    app:iconifiedByDefault="false"
+                    android:background="@drawable/search_view_bg" />
+
+                <!-- Todas las categorías -->
+                <TextView
+                    android:id="@+id/tvCategory"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:text="@string/categorias"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
+
+                <!-- Lista de categorías horizontal -->
+                <HorizontalScrollView
+                    android:id="@+id/hsvCategories"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scrollbars="none"
+                    android:fillViewport="true">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:paddingHorizontal="12dp">
+
+                        <!-- Botones con las categorías -->
+                        <Button
+                            style="?attr/materialIconButtonFilledStyle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingHorizontal="18dp"
+                            android:text="@string/todas" />
+
+                        <Button
+                            style="?attr/materialIconButtonFilledTonalStyle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingHorizontal="18dp"
+                            android:text="@string/nombreCategoria" />
+
+                        <Button
+                            style="?attr/materialIconButtonFilledTonalStyle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingHorizontal="18dp"
+                            android:text="@string/nombreCategoria"/>
+
+                        <Button
+                            style="?attr/materialIconButtonFilledTonalStyle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingHorizontal="18dp"
+                            android:text="@string/nombreCategoria" />
+
+                        <Button
+                            style="?attr/materialIconButtonFilledTonalStyle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingHorizontal="18dp"
+                            android:text="@string/nombreCategoria" />
+                    </LinearLayout>
+
+                </HorizontalScrollView>
+
+                <!-- Restaurantes -->
+                <TextView
+                    android:id="@+id/tvRestaurants"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:text="@string/restaurantes"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="16dp"/>
+
+                <!-- Lista de restaurantes -->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvRestaurants"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false" />
+
+            </LinearLayout>
 
 
-</RelativeLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+    </LinearLayout>
+
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
