--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -11,7 +12,8 @@
     <ImageView
         android:id="@+id/restaurantImage"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="180dp"
+        android:contentDescription="@string/imgRest"
         android:scaleType="centerCrop"
         android:layout_marginBottom="8dp" />
 
@@ -29,25 +31,25 @@
             android:textSize="18sp"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:text="Rose Garden Restaurant" />
+            android:text="@string/nameRest" />
 
         <!-- Calificación del restaurante -->
         <TextView
             android:id="@+id/restaurantRating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_star"
             android:gravity="center_vertical"
-            android:text="4.7"
-            android:textSize="14sp" />
+            android:text="@string/rateRest"
+            android:textSize="14sp"
+            app:drawableStartCompat="@drawable/ic_star" />
     </LinearLayout>
 
-    <!-- Platos principales -->
+    <!-- Categorias de comida por restaurante -->
     <TextView
-        android:id="@+id/restaurantPlates"
+        android:id="@+id/restCategories"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Burger - Chicken - Ribs - Wings"
+        android:text="@string/catRest"
         android:textSize="14sp"
         android:textColor="@color/gray" />
 </LinearLayout>
